# AK_2_Projekt

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: cmake.yml
perf_test/: BCDPerformanceTester.h  main.cpp
src/: BCD.cpp  BCD.h  BCD_add.cpp  BCD_add.h  BCD_mul.cpp  BCD_mul.h  BCD_sub.cpp  BCD_sub.h  main.cpp
test/: BCD_add_tst.cpp  BCD_mul_tst.cpp  BCD_sub_tst.cpp  sample_test.cpp
